--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "vue-template-compiler": "^2.6.11",
-    "svg-sprite-loader": "4.1.3"
+    "svg-sprite-loader": "4.1.3",
+    "vue-template-compiler": "^2.6.11"
   }
 }
