--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "svg-sprite-loader": "4.1.3",
+    "vue-cli-plugin-windicss": "~1.1.3",
     "vue-template-compiler": "^2.6.11"
   }
 }
