--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "less-loader": "^5.0.0",
     "svg-sprite-loader": "4.1.3",
     "vue-cli-plugin-windicss": "~1.1.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "worker-plugin": "^5.0.1"
   }
 }
