--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
+    "lodash": "^4.17.21",
+    "path": "^0.12.7",
     "vconsole": "^3.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
