--- a/package.json
+++ b/package.json
@@ -8,33 +8,61 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "echarts": "^5.3.2",
     "element-ui": "^2.15.1",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.0",
     "path": "^0.12.7",
     "vconsole": "^3.2.0",
     "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.12.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-plugin-eslint": "^4.5.0",
+    "@vue/cli-plugin-typescript": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
+    "eslint": "~7.29.0",
+    "eslint-config-prettier": "~8.3.0",
+    "eslint-plugin-prettier": "~3.4.0",
+    "eslint-plugin-vue": "~7.13.0",
+    "eslint-plugin-zflow": "^1.0.4",
+    "lint-staged": "^9.5.0",
+    "prettier": "~2.3.0",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
     "svg-sprite-loader": "4.1.3",
+    "tslib": "^2.4.0",
+    "typescript": "4.4.4",
     "vue-cli-plugin-windicss": "~1.1.3",
     "vue-template-compiler": "^2.6.11",
     "worker-plugin": "^5.0.1"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ],
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "vue-cli-service lint",
+      "git add"
+    ],
+    "*.vue": [
+      "vue-cli-service lint",
+      "git add"
+    ]
   }
 }
