--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vue/cli-plugin-typescript": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
+    "dependency-cruiser": "^11.18.0",
     "eslint": "~7.29.0",
     "eslint-config-prettier": "~8.3.0",
     "eslint-plugin-prettier": "~3.4.0",
