--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "path": "^0.12.7",
+    "systemjs": "^6.13.0",
     "vconsole": "^3.2.0",
     "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
+    "vue-class-component": "^7.2.6",
+    "vue-grid-layout": "^2.4.0",
+    "vue-i18n": "8.28.2",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
