--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "analyze": "vue-cli-service build --report"
   },
   "dependencies": {
+    "@visactor/vtable": "1.3.2",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "echarts": "^5.3.2",
     "element-ui": "^2.15.1",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
+    "lru-cache": "^10.2.2",
     "mitt": "^3.0.0",
     "path": "^0.12.7",
+    "pinia": "^2.1.7",
     "systemjs": "^6.13.0",
     "vconsole": "^3.2.0",
     "vue": "^2.6.11",
@@ -50,10 +54,11 @@
     "typescript": "4.4.4",
     "vue-cli-plugin-windicss": "~1.1.3",
     "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^4.10.1",
     "worker-plugin": "^5.0.1"
   },
   "browserslist": [
-    "> 1%",
+    "chrome >= 66",
     "last 2 versions",
     "not dead"
   ],
