--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "core-js": "^3.6.5",
     "echarts": "^5.3.2",
     "element-ui": "^2.15.1",
+    "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "lru-cache": "^10.2.2",
     "mitt": "^3.0.0",
     "path": "^0.12.7",
