--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "dependency-cruiser": "^11.18.0",
     "eslint": "~7.29.0",
     "eslint-config-prettier": "~8.3.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "~3.4.0",
     "eslint-plugin-vue": "~7.13.0",
     "eslint-plugin-zflow": "^1.0.4",
