--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "printWidth": 120,
   "singleQuote": true,
-  "trailingComma": "none",
-  "semi": false,
-  "arrowParens": "avoid"
+  "semi": true,
+  "trailingComma": "es5",
+  "endOfLine": "auto"
 }
