--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@visactor/vtable": "1.3.2",
+    "@vue/composition-api": "^1.7.2",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "echarts": "^5.3.2",
