--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "analyze": "vue-cli-service build --report"
+    "analyze": "vue-cli-service build --report",
+    "vite": "vite"
   },
   "dependencies": {
     "@visactor/vtable": "1.3.2",
@@ -34,6 +35,8 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.12.0",
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
+    "@originjs/vite-plugin-require-context": "^1.0.9",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
     "@vue/cli-plugin-babel": "^4.5.0",
@@ -56,6 +59,8 @@
     "svg-sprite-loader": "4.1.3",
     "tslib": "^2.4.0",
     "typescript": "4.4.4",
+    "vite": "2",
+    "vite-plugin-vue2": "^2.0.3",
     "vue-cli-plugin-windicss": "~1.1.3",
     "vue-template-compiler": "^2.6.11",
     "webpack-bundle-analyzer": "^4.10.1",
