--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "tslib": "^2.4.0",
     "typescript": "4.4.4",
     "vite": "2",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue2": "^2.0.3",
     "vue-cli-plugin-windicss": "~1.1.3",
     "vue-template-compiler": "^2.6.11",
