--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "node ./script/dev-server.js && vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "analyze": "vue-cli-service build --report",
@@ -45,6 +45,7 @@
     "@vue/cli-service": "^4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "dependency-cruiser": "^11.18.0",
+    "ejs": "^3.1.10",
     "eslint": "~7.29.0",
     "eslint-config-prettier": "~8.3.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -52,10 +53,12 @@
     "eslint-plugin-prettier": "~3.4.0",
     "eslint-plugin-vue": "~7.13.0",
     "eslint-plugin-zflow": "^1.0.4",
+    "hard-source-webpack-plugin": "^0.13.1",
     "lint-staged": "^9.5.0",
     "prettier": "~2.3.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "svg-sprite-loader": "4.1.3",
     "tslib": "^2.4.0",
     "typescript": "4.4.4",
