--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@visactor/vtable": "1.3.2",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.4.0",
+    "@vue/babel-preset-jsx": "^1.4.0",
     "@vue/composition-api": "^1.7.2",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
@@ -23,6 +25,7 @@
     "mitt": "^3.0.0",
     "path": "^0.12.7",
     "pinia": "^2.1.7",
+    "qiankun": "^2.10.16",
     "systemjs": "^6.13.0",
     "vconsole": "^3.2.0",
     "vue": "^2.6.11",
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.12.0",
+    "@babel/plugin-transform-typescript": "^7.25.7",
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@originjs/vite-plugin-require-context": "^1.0.9",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
@@ -44,6 +48,8 @@
     "@vue/cli-plugin-typescript": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
+    "babel-plugin-component": "^1.1.1",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "dependency-cruiser": "^11.18.0",
     "ejs": "^3.1.10",
     "eslint": "~7.29.0",
