--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@vue/cli-service": "^4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-plugin-component": "^1.1.1",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-vca-jsx": "^0.3.6",
     "dependency-cruiser": "^11.18.0",
     "ejs": "^3.1.10",
     "eslint": "~7.29.0",
